# senior-design-2019

./: README.md
ball_detection/: object_detection_with_own_model.py
ball_detection/tools/: label_directory_switch.py  train_test_switcharoni.py  xml_to_csv.py
ball_detection/tools/video_labeling_tool/: convert_labels_to_records.py
catkin_ws/: README.md
catkin_ws/scripts/: build.sh  enable_usb.sh  install.sh
catkin_ws/scripts/manifold/: install.sh
catkin_ws/scripts/manifold/m1/: UserConfig.txt  dji_sim_drone.launch
catkin_ws/src/mbz2020_common/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/mbz2020_common/action/: PlanRequest.action
catkin_ws/src/mbz2020_common/launch/: aruco.launch  aruco_single.launch  base_hardware.launch  cameras.launch  dual_ekf.launch  filters.launch  gps_only.launch  localization.launch  main.launch  mav.launch  mav_utils.launch  px4.launch  rotors.launch  sim.launch  single_ekf.launch  spawn_mav.launch  transforms.launch  visual_servoing.launch  waypoints.launch
catkin_ws/src/mbz2020_common/launch/task_missions/: pickup_demo.launch  takeoff_land.launch
catkin_ws/src/mbz2020_common/msg/: LOS.msg  MapGrid.msg  MotionPointStamped.msg  MotionPointStampedArray.msg  MotionTrajectory.msg  MultiRange.msg  PN.msg  Target.msg
catkin_ws/src/mbz2020_common/params/: dual_ekf.yaml  filters.yaml  indoor_robot_localization.yaml  px4_config.yaml
catkin_ws/src/mbz2020_common/robots/: m1.urdf.xacro
catkin_ws/src/mbz2020_common/scripts/: fix_imu.py  map_odom_to_pose.py  pub_odom_markers.py  transform_odom.py
catkin_ws/src/mbz2020_common/scripts/bagging/: no_cameras.sh  record_with_cameras.sh  record_with_cameras_aligned.sh
catkin_ws/src/mbz2020_common/src/mbz2020_common/: altimeter_filter.py  odometry_filter.py  range_altimeter_filter.py
catkin_ws/src/mbz2020_deps/: .gitignore  .gitmodules  README.md
catkin_ws/src/mbz2020_deps/src/mbz2020_deps/: CMakeLists.txt  package.xml
catkin_ws/src/mbz2020_deps/src/sf30_node/: README.md  package.xml
catkin_ws/src/mbz2020_mission/: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
catkin_ws/src/mbz2020_mission/scripts/: go_to_target.py  takeoff_land.py
catkin_ws/src/mbz2020_planner/: .gitmodules  Dockerfile  README.md
catkin_ws/src/mbz2020_planner/src/mbz2020_planner/: CMakeLists.txt  package.xml
firmware/: firmware.ino
scripts/: arm_demo.py
(+66 files in other folders)
