<?xml version="1.0"?>
<package format="2">
  <name>mbz2020_planner</name>
  <version>0.0.0</version>
  <description>The mbz2020_planner meta package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="anish@todo.todo">anish</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mbz2020_target_planners</exec_depend>
  <exec_depend>catkin_simple</exec_depend>
  <exec_depend>eigen_checks</exec_depend>
  <exec_depend>mav_trajectory_generation</exec_depend>
  <exec_depend>mbz2020_pickup</exec_depend>
  <exec_depend>mbz2020_target_planners</exec_depend>
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>mav_comm</exec_depend>
  <exec_depend>mbz2020_ibvs</exec_depend>
  <exec_depend>mbz2020_pn_guidance</exec_depend>
  <exec_depend>nlopt</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>
</package>
